--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-# title: Your awesome title
-# email: your-email@example.com
-# description: >- # this means to ignore newlines until "baseurl:"
-#   Write an awesome description for your new site here. You can edit this
-#   line in _config.yml. It will appear in your document head meta (for
-#   Google search results) and in your feed.xml site description.
-# baseurl: "" # the subpath of your site, e.g. /blog
-# url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-# github_username:  jekyll
+title: BTable
+email: lucisolorz@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
-# theme: minima
-# plugins:
-#   - jekyll-feed
+theme: minima
+plugins:
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -56,82 +56,82 @@
 
 
 # Site
-name: "Memoirs"
-title: "Memoirs"
-description: "I will take you on the fabulous world of exploration. Travel, culture, lifestyle. Eat, Pray, Love!"
-logo: 'assets/images/logo.png'
-favicon: 'assets/images/logo.png'
-baseurl: /jekyll-theme-memoirs
-google_analytics: 'UA-xxxxxxxx-1'
-disqus: 'demowebsite'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
-include: ["_pages"]
-permalink: /:title/
-email: wowthemesnet@gmail.com
+# name: "Memoirs"
+# title: "Memoirs"
+# description: "I will take you on the fabulous world of exploration. Travel, culture, lifestyle. Eat, Pray, Love!"
+# logo: 'assets/images/logo.png'
+# favicon: 'assets/images/logo.png'
+# baseurl: /jekyll-theme-memoirs
+# google_analytics: 'UA-xxxxxxxx-1'
+# disqus: 'demowebsite'
+# mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+# include: ["_pages"]
+# permalink: /:title/
+# email: wowthemesnet@gmail.com
 
-# Authors
-authors:
-  sal:
-    name: Sal
-    display_name: Sal
-    avatar: 'assets/images/avatar-sal.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net/donate/
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Memoirs, a Bootstrap Medium styled template available for Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
-    avatar: 'assets/images/avatar.png'
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
+# # Authors
+# authors:
+#   sal:
+#     name: Sal
+#     display_name: Sal
+#     avatar: 'assets/images/avatar-sal.png'
+#     email: wowthemesnet@gmail.com
+#     web: https://www.wowthemes.net/donate/
+#     twitter: https://twitter.com/wowthemesnet
+#     description: "Author of Memoirs, a Bootstrap Medium styled template available for Jekyll. You are currently previewing Jekyll template demo."
+#   john:
+#     name: John
+#     display_name: John    
+#     avatar: 'assets/images/avatar.png'
+#     email: wowthemesnet@gmail.com
+#     web: https://www.wowthemes.net
+#     twitter: https://twitter.com/wowthemesnet
+#     description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
 
-# Plugins
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-feed
-  - jekyll-seo-tag
-  - jekyll-archives
-  - jekyll-figure
+# # Plugins
+# plugins:
+#   - jekyll-paginate
+#   - jekyll-sitemap
+#   - jekyll-feed
+#   - jekyll-seo-tag
+#   - jekyll-archives
+#   - jekyll-figure
     
-# Archives
-jekyll-archives:
-  enabled:
-    - categories
-  layout: archive
-  permalinks:
-    category: '/category/:name/'
+# # Archives
+# jekyll-archives:
+#   enabled:
+#     - categories
+#   layout: archive
+#   permalinks:
+#     category: '/category/:name/'
     
-# Pagination 
-paginate: 6
-paginate_path: /page:num/
+# # Pagination 
+# paginate: 6
+# paginate_path: /page:num/
     
-# Other
-highlighter: none
-markdown: kramdown
-kramdown:
-   syntax_highlighter_opts:
-      disable : true
+# # Other
+# highlighter: none
+# markdown: kramdown
+# kramdown:
+#    syntax_highlighter_opts:
+#       disable : true
 
 
 
-# Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
-adsense: "disabled"
-adsense-data-ad-client: "ca-pub-3412143450191416"
-adsense-data-ad-slot: "1363087678"
+# # Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
+# adsense: "disabled"
+# adsense-data-ad-client: "ca-pub-3412143450191416"
+# adsense-data-ad-slot: "1363087678"
 
-# Lazy Images ("enabled" or "disabled")
-lazyimages: "disabled"
+# # Lazy Images ("enabled" or "disabled")
+# lazyimages: "disabled"
 
-# Post Author Box ("enabled" or "disabled")
-authorbox: "enabled"
+# # Post Author Box ("enabled" or "disabled")
+# authorbox: "enabled"
 
-# Sass
-sass:
-  sass_dir: _sass
-  style: compressed
+# # Sass
+# sass:
+#   sass_dir: _sass
+#   style: compressed
 
-exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
+# exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
